--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,23 +1,25 @@
 <% layout('layouts/boilerplate') %>
-
-<h1>
-    <%= campground.title %>
-</h1>
-<h2>
-    <%= campground.location %>
-</h2>
-<img src="<%= campground.image %> " width="100%" alt="">
-<p>
-    <%= campground.description %>
-</p>
-<p>
-    <a href="/campgrounds/<%= campground._id %>/edit">Edit</a>
-</p>
-<p>
-<form action="/campgrounds/<%= campground._id %>?_method=DELETE" method="post">
-    <button>Delete</button>
-</form>
-</p>
-<footer>
-    <a href="/campgrounds">All Campgrounds</a>
-</footer>
+<div class="row">
+    <div class="col-6 offset-3">
+        <div class="card mb-3">
+            <img src="<%= campground.image %>" class="card-img-top" alt="campground image">
+            <div class="card-body">
+              <h3 class="card-title"><%= campground.title %></h3>
+              <p class="card-text"><%= campground.description %></p>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item text-secondary"><%= campground.location %></li>
+              <li class="list-group-item">$<%= campground.price %>/night</li>
+            </ul>
+            <div class="card-body">
+                <a class="card-link btn btn-info" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
+                <form class="d-inline" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="post">
+                    <button class="btn btn-danger">Delete</button>
+                </form>
+            </div>
+            <div class="card-footer text-muted">
+                2 days ago
+            </div>
+          </div>
+    </div>
+</div>
