--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -15,44 +15,62 @@
           <li class="list-group-item text-secondary">
             <%= campground.location %>
           </li>
+          <li class="list-group-item">
+            Submitted by <%= campground.author.username %>
+          </li>
           <li class="list-group-item">$<%= campground.price %>/night</li>
         </ul>
-        <div class="card-body">
-          <a class="card-link btn btn-info" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
-          <form class="d-inline" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="post">
-            <button class="btn btn-danger">Delete</button>
-          </form>
-        </div>
-        <div class="card-footer text-muted">
-          2 days ago
-        </div>
+        <% if(currentUser && campground.author.equals(currentUser._id)) {%>
+          <div class="card-body">
+            <a class="card-link btn btn-info" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
+            <form class="d-inline" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="post">
+              <button class="btn btn-danger">Delete</button>
+            </form>
+          </div>
+          <% } %>
+            <div class="card-footer text-muted">
+              2 days ago
+            </div>
       </div>
     </div>
     <div class="col-6">
-      <h2>Leave a Review</h2>
-      <form action="/campgrounds/<%= campground._id %>/reviews" method="post" class="mb-3 validated-form" novalidate>
-        <div class="mb-3">
-          <label for="customRange1" class="form-label">Rating</label>
-          <input name="review[rating]" type="range" class="form-range" id="customRange1" min="1" max="5">
-        </div>
-        <div class="mb-3">
-          <label class="form-label" for="body">Review</label>
-          <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" required></textarea>
-        </div>
-        <button class="btn btn-success">Submit</button>
-      </form>
-      <% for(let review of campground.reviews) { %>
-        <div class="mb-3 card">
-          <div class="card-body">
-            <h5 class="card-title">Rating: <%= review.rating %>
-            </h5>
-            <p class="card-text">Review: <%= review.body %>
-            </p>
-            <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="post">
-              <button class="btn btn-sm btn-danger">Delete</button>
-            </form>
+
+      <% if(currentUser){ %>
+        <h2>Leave a Review</h2>
+        <form action="/campgrounds/<%= campground._id %>/reviews" method="post" class="mb-3 validated-form" novalidate>
+          <div class="mb-3">
+            <label for="customRange1" class="form-label">Rating</label>
+            <input name="review[rating]" type="range" class="form-range" id="customRange1" min="1" max="5">
           </div>
-        </div>
+          <div class="mb-3">
+            <label class="form-label" for="body">Review</label>
+            <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" required></textarea>
+          </div>
+          <button class="btn btn-success">Submit</button>
+        </form>
         <% } %>
+
+
+          <% for(let review of campground.reviews) { %>
+            <div class="mb-3 card">
+              <div class="card-body">
+                <h5 class="card-title">Rating: <%= review.rating %>
+                </h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary">
+                  By <%= review.author.username %>
+                </h6>
+                <p class="card-text">
+                  <%= review.body %>
+                </p>
+                <% if(currentUser && review.author.equals(currentUser._id)) {%>
+                  <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE"
+                    method="post">
+                    <button class="btn btn-sm btn-danger">Delete</button>
+                  </form>
+                  <% } %>
+
+              </div>
+            </div>
+            <% } %>
     </div>
   </div>
