--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -3,7 +3,7 @@
         <h1 class="text-center">Edit Campground</h1>
         <div class="col-6 offset-3">
             <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="post" novalidate
-                class="validated-form">
+                class="validated-form" enctype="multipart/form-data">
                 <div class="mb-3">
                     <label class="form-label" for="title">Title</label>
                     <input class="form-control" type="text" id="title" name="campground[title]"
@@ -13,11 +13,6 @@
                     <label class="form-label" for="location">Location</label>
                     <input class="form-control" type="text" id="location" name="campground[location]"
                         value="<%= campground.location %>" required>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label" for="image">Image Url</label>
-                    <input class="form-control" type="text" id="image" name="campground[image]"
-                        value="<%= campground.image %>" required>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="price">Campground Price</label>
@@ -33,6 +28,53 @@
                     <textarea class="form-control" type="text" id="description" name="campground[description]"
                         required><%= campground.description %></textarea>
                 </div>
+                <!-- ########################################################## -->
+                <!-- Refactor this later -->
+
+                <div class="mb-3">
+                    <input class="form-control" type="file" id="image" name="image" multiple>
+                    <label for="image" id="image-label" class="form-label">Choose image(s)...</label>
+                </div>
+
+                <style>
+                    #image-label {
+                        position: absolute;
+                        margin-left: 15px;
+                        margin-top: -34px;
+                        pointer-events: none;
+                        color: #6c757d;
+                        /* Bootstrap's default text-muted color */
+                    }
+
+                    input:focus+#image-label,
+                    input:not(:placeholder-shown)+#image-label {
+                        display: none;
+                    }
+                </style>
+
+                <script>
+                    const fileInput = document.getElementById('image');
+                    const label = document.getElementById('image-label');
+
+                    fileInput.addEventListener('change', function () {
+                        if (fileInput.files.length > 0) {
+                            label.style.display = 'none';
+                        } else {
+                            label.style.display = 'block';
+                        }
+                    });
+                </script>
+                <!-- ########################################################## -->
+
+                <% campground.images.forEach((img,i)=>{%> 
+                    <img src="<%=img.thumbnail%>" class="img-thumbnail" alt="">
+                    <div class="form-check-inline">
+                        <input type="checkbox" id="image-<%= i %>" name="deleteImages[]" value="<%= img.filename %>">
+                    </div>
+                    <label for="image-<%= i %>">Delete?</label>
+                <% }) %> 
+              
+
                 <div class="mb-3">
                     <button class="btn btn-info">Update Campground</button>
                 </div>
