--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,8 +1,33 @@
 <% layout('layouts/boilerplate') %>
+  <link rel="stylesheet" href="/public/stylesheets/stars.css" />
+
+
   <div class="row">
     <div class="col-6">
+      <div id="campgroundCarousel" class="carousel slide">
+        <div class="carousel-inner">
+          <% for(let i=0; i < campground.images.length; i++) { %>
+            <div class="carousel-item <%= i === 0 ? 'active' : '' %>">
+              <img src="<%= campground.images[i].url %>" class="d-block w-100" alt="campground image">
+            </div>
+            <% } %>
+
+        </div>
+        <% if(campground.images.length> 1) {%>
+          <button class="carousel-control-prev" type="button" data-bs-target="#campgroundCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#campgroundCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+          <% } %>
+
+      </div>
       <div class="card mb-3">
-        <img src="<%= campground.image %>" class="card-img-top" alt="campground image">
+
+
         <div class="card-body">
           <h3 class="card-title">
             <%= campground.title %>
